--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,8 +6,7 @@
 <nav class="bg-white shadow">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between h-16">
-      <div class="flex">
-        <div class="flex-shrink-0 flex items-center">
+      <div class="flex">        <div class="flex-shrink-0 flex items-center">
           <a href="/" class="text-xl font-bold text-gray-900">
             Signals & Systems
           </a>
