--- a/src/layouts/SeriesLayout.astro
+++ b/src/layouts/SeriesLayout.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from './BaseLayout.astro';
 import SeriesNav from '../components/SeriesNav.astro';
+import Footer from '../components/Footer.astro';
+import { formatDateUTC } from '../utils/formatDate';
 
 interface SeriesArticle {
   title: string;
@@ -86,4 +88,5 @@ const nextArticle = currentIndex < seriesArticles.length - 1 ? seriesArticles[cu
       </div>
     </article>
   </div>
+  <Footer slot="footer" />
 </BaseLayout>
